<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="20"
    android:id="@+id/registerLayout">

    <TextView
        android:text="@string/name_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameLabel"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:layout_weight="1"
        style="@style/yellowText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textNoSuggestions|textPersonName"
        android:ems="10"
        android:id="@+id/nameTf"
        android:layout_weight="1" />

    <TextView
        android:text="@string/tel_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/telLabel"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:layout_weight="1"
        style="@style/bigYellowText"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/telTf"
        android:layout_weight="1" />

    <TextView
        android:text="@string/location_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/locationLabel"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:layout_weight="1" />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/locationTf"
        android:layout_weight="1" />

    <TextView
        android:text="@string/infos_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/infoLabel"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:layout_weight= "1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/infoTf"
        android:layout_weight="10" />

    <CheckBox
        android:text="@string/hurry_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hurryCheckBox"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:layout_weight="1" />

    <Button
        android:text="@string/register_btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="onClickRegister"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/outcomeLabel"
        android:text="@string/stub"
        android:layout_weight="1" />

</LinearLayout>