<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/carteMenu"
        android:icon="@android:drawable/ic_menu_crop"
        android:showAsAction="ifRoom|withText"
        android:title="@string/map_title"></item>
    <item
        android:id="@+id/optionsMenu"
        android:icon="@android:drawable/ic_menu_more"
        android:showAsAction="ifRoom|withText"
        android:title="@string/options_menu">
        <menu>
            <item
                android:id="@+id/enregistrerMenu"
                android:checkable="true"
                android:icon="@android:drawable/ic_menu_agenda"
                android:showAsAction="ifRoom|withText"
                android:title="@string/register_btn_register"></item>
        </menu>
    </item>
</menu>